--- a/openshift-tasks/Jenkinsfile
+++ b/openshift-tasks/Jenkinsfile
@@ -6,7 +6,7 @@ podTemplate(
   containers: [
     containerTemplate(
       name: "jnlp",
-      image: "docker-registry.default.svc:5000/${GUID}-jenkins/jenkins-agent-appdev",
+      image: "docker-registry.default.svc:5000/ff0d-jenkins/jenkins-agent-appdev",
       resourceRequestMemory: "1Gi",
       resourceLimitMemory: "2Gi",
       resourceRequestCpu: "1",
@@ -25,23 +25,26 @@ podTemplate(
     }
 
     // Build the Tasks Service
-    dir('openshift-tasks') {
+    //dir('openshift-tasks') {
       // The following variables need to be defined at the top level
       // and not inside the scope of a stage - otherwise they would not
       // be accessible from other stages.
       // Extract version from the pom.xml
-      def version = getVersionFromPom("pom.xml")
+      def pom = readMavenPom file: 'openshift-tasks/pom.xml'
+      def version = pom.version
+    
+      def prefix      = "2846"
 
       // TBD Set the tag for the development image: version + build number
-      def devTag  = ""
+      def devTag  = "0.0-0"
       // Set the tag for the production image: version
-      def prodTag = ""
+      def prodTag = "0.0"
 
       // Using Maven build the war file
       // Do not run tests in this step
       stage('Build war') {
         echo "Building version ${devTag}"
-
+        sh "mvn -f ./openshift-tasks/pom.xml -s ./nexus_settings.xml clean package -DskipTests=true"
         // TBD: Execute Maven Build
       }
 
@@ -50,35 +53,68 @@ podTemplate(
       // Using Maven run the unit tests
       stage('Unit Tests') {
         echo "Running Unit Tests"
-
+        sh "mvn -f ./openshift-tasks/pom.xml -s ./nexus_settings.xml test" 
+      step([$class: 'JUnitResultArchiver', testResults: '**/target/surefire-reports/TEST-*.xml'])
         // TBD: Execute Unit Tests
       }
 
       // Using Maven to call SonarQube for Code Analysis
       stage('Code Analysis') {
         echo "Running Code Analysis"
-
+        sh "mvn -f ./openshift-tasks/pom.xml -s ./nexus_settings.xml sonar:sonar -Dsonar.host.url=http://sonarqube-gpte-hw-cicd.apps.na311.openshift.opentlc.com -Dsonar.projectName=${JOB_BASE_NAME} -Dsonar.projectVersion=${devTag}"
         // TBD: Execute Sonarqube Tests
       }
 
       // Publish the built war file to Nexus
       stage('Publish to Nexus') {
         echo "Publish to Nexus"
-
+        sh "mvn -s ./nexus_settings.xml -f ./openshift-tasks/pom.xml deploy -DskipTests=true -DaltDeploymentRepository=nexus::default::http://nexus3.gpte-hw-cicd.svc.cluster.local:8081/repository/releases"
         // TBD: Publish to Nexus
       }
-
+    
+      def devProject  = "${prefix}-tasks-dev"
+      def prodProject = "${prefix}-tasks-prod"
+    
       // Build the OpenShift Image in OpenShift and tag it.
       stage('Build and Tag OpenShift Image') {
         echo "Building OpenShift container image tasks:${devTag}"
-
+        script {
+         openshift.withCluster() {
+          openshift.withProject("${devProject}") {
+            openshift.selector("bc", "tasks").startBuild("--from-file=./openshift-tasks/target/openshift-tasks.war", "--wait=true")
+            openshift.tag("tasks:latest", "tasks:${devTag}")
+        }
+     }
+   }
         // TBD: Build Image, tag Image
       }
 
       // Deploy the built image to the Development Environment.
       stage('Deploy to Dev') {
         echo "Deploying container image to Development Project"
-
+        script {
+      // Update the Image on the Development Deployment Config
+      openshift.withCluster() {
+        openshift.withProject("${devProject}") {
+          openshift.set("image", "dc/tasks", "tasks=docker-registry.default.svc:5000/${devProject}/tasks:${devTag}") 
+          // Update the Config Map which contains the users for the Tasks application
+          // (just in case the properties files changed in the latest commit)
+          openshift.selector('configmap', 'tasks-config').delete()
+          def configmap = openshift.create('configmap', 'tasks-config', '--from-file=./openshift-tasks/configuration/application-users.properties', '--from-file=./openshift-tasks/configuration/application-roles.properties' )
+          // Deploy the development application.
+          openshift.selector("dc", "tasks").rollout().latest();
+          // Wait for application to be deployed
+          def dc = openshift.selector("dc", "tasks").object()
+          def dc_version = dc.status.latestVersion
+          def rc = openshift.selector("rc", "tasks-${dc_version}").object()
+          echo "Waiting for ReplicationController tasks-${dc_version} to be ready"
+          while (rc.spec.replicas != rc.status.readyReplicas) {
+            sleep 5
+            rc = openshift.selector("rc", "tasks-${dc_version}").object()        
+          }
+         }
+        }
+       }
         // TBD: Deploy to development Project
         //      Set Image, Set VERSION
         //      Make sure the application is running and ready before proceeding
@@ -87,7 +123,14 @@ podTemplate(
       // Copy Image to Nexus container registry
       stage('Copy Image to Nexus container registry') {
         echo "Copy image to Nexus container registry"
-
+        script {
+      sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false --src-creds openshift:\$(oc whoami -t) --dest-creds admin:redhat docker://docker-registry.default.svc.cluster.local:5000/${devProject}/tasks:${devTag} docker://nexus3-registry-gpte-hw-cicd.apps.na311.openshift.opentlc.com/tasks:${devTag}"
+      openshift.withCluster() {
+        openshift.withProject("${prodProject}") {
+          openshift.tag("${devProject}/tasks:${devTag}", "${devProject}/tasks:${prodTag}")
+        }
+      }
+    }
         // TBD: Copy image to Nexus container registry
 
         // TBD: Tag the built image with the production tag.
@@ -103,13 +146,53 @@ podTemplate(
         //      Set Image, Set VERSION
         //      Deploy into the other application
         //      Make sure the application is running and ready before proceeding
+        echo "Blue/Green Deployment"
+        script {
+      openshift.withCluster() {
+        openshift.withProject("${prodProject}") {
+          activeApp = openshift.selector("route", "tasks").object().spec.to.name
+          if (activeApp == "tasks-green") {
+            destApp = "tasks-blue"
+          }
+          echo "Active Application:      " + activeApp
+          echo "Destination Application: " + destApp
+          // Update the Image on the Production Deployment Config
+          def dc = openshift.selector("dc/${destApp}").object()
+          dc.spec.template.spec.containers[0].image="docker-registry.default.svc:5000/${devProject}/tasks:${prodTag}"
+          openshift.apply(dc)
+          // Update Config Map in change config files changed in the source
+          openshift.selector("configmap", "${destApp}-config").delete()
+          def configmap = openshift.create("configmap", "${destApp}-config", "--from-file=./openshift-tasks/configuration/application-users.properties", "--from-file=./openshift-tasks/configuration/application-roles.properties" )
+          // Deploy the inactive application.
+          openshift.selector("dc", "${destApp}").rollout().latest();
+          // Wait for application to be deployed
+          def dc_prod = openshift.selector("dc", "${destApp}").object()
+          def dc_version = dc_prod.status.latestVersion
+          def rc_prod = openshift.selector("rc", "${destApp}-${dc_version}").object()
+          echo "Waiting for ${destApp} to be ready"
+          while (rc_prod.spec.replicas != rc_prod.status.readyReplicas) {
+            sleep 5
+            rc_prod = openshift.selector("rc", "${destApp}-${dc_version}").object()
+          }
+        }
+      }
+    }
       }
 
       stage('Switch over to new Version') {
         echo "Switching Production application to ${destApp}."
+        script {
+       openshift.withCluster() {
+         openshift.withProject("${prodProject}") {
+           def route = openshift.selector("route/tasks").object()
+           route.spec.to.name="${destApp}"
+           openshift.apply(route)
+          }
+         }
+        }
         // TBD: Execute switch
       }
-    }
+    //}
   }
 }
 
